RESOLVED FIXED27480
REGRESSION (r46142): editing/execCommand/19087.html & editing/execCommand/19653-1.html fail in Windows build
https://bugs.webkit.org/show_bug.cgi?id=27480
Summary REGRESSION (r46142): editing/execCommand/19087.html & editing/execCommand/19...
Ryosuke Niwa
Reported 2009-07-20 19:32:47 PDT
editing/execCommand/19087.html and editing/execCommand/19653-1.html either fail or crash after the changeset 46142.
Attachments
fixes the bug in Position.h (deleted)
2009-07-21 14:57 PDT, Ryosuke Niwa
eric: review+
Ryosuke Niwa
Comment 1 2009-07-21 14:57:34 PDT
Created attachment 33216 [details] fixes the bug in Position.h
Eric Seidel (no email)
Comment 2 2009-07-21 14:59:11 PDT
Comment on attachment 33216 [details] fixes the bug in Position.h Fix the Tabs in the ChangeLog, and then this is fine.
Ryosuke Niwa
Comment 3 2009-07-21 16:47:14 PDT
Alexey Proskuryakov
Comment 4 2009-07-22 09:40:40 PDT
Note You need to log in before you can comment on or make changes to this bug.