2009-07-21  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Eric Seidel.

        REGRESSION (r46142):  editing/execCommand/19087.html & editing/execCommand/19653-1.html fail in Windows build
        https://bugs.webkit.org/show_bug.cgi?id=27480

        Because m_anchorType : 2 is treated as a signed integer by cl.exe, anchorType() wasn't returning the correct value.
        We made m_anchorType unsigned so that anchorType() returns the correct value.

        * dom/Position.h:
        (WebCore::Position::anchorType): statically cast to AnchorType



Canonical link: https://commits.webkit.org/37816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46200 268f45cc-cd09-0410-ab3c-d52691b4dbfc